--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -6,17 +6,19 @@
     <section class="vh-100" style="background-color: #9de2ff;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col col-md-9 col-lg-7 col-xl-5">
+                <div class="col col-md-11 col-lg-9 col-xl-7">
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-4">
                             <div class="d-flex text-black">
                                 <div class="flex-shrink-0">
-                                    <img [src]="user?.base64Image" alt="Generic placeholder image" class="img-fluid"
-                                        style="width: 180px; border-radius: 10px;">
+                                    <div class="img-container">
+                                        <span class="helper"></span><img *ngIf="user?.base64Image" [src]="user?.base64Image" alt="profile picture" class="img-fluid user-img">
+                                        <span class="helper"></span><img *ngIf="!user?.base64Image" src="./assets/img/default-profile-image.png" alt="Generic placeholder image" class="img-fluid user-img">
+                                    </div>
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">{{user?.userName}}</h5>
-                                    <p class="mb-2 pb-1" style="color: #2b2a2a;">{{user?.userName}}</p>
+<!--                                    <p class="mb-2 pb-1" style="color: #2b2a2a;">{{user?.userName}}</p>-->
                                     <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
                                         style="background-color: #efefef;">
                                         <div>
@@ -30,17 +32,8 @@
                                             <p>
                                                 <label for="Profielfoto">Profielfoto</label>
                                             </p>
-                                            <input placeholder="Upload je profielfoto." type="file" id="file"
+                                            <input placeholder="Upload je profielfoto." type="file" id="file" class="image-uploader"
                                                 (change)="onSelectFile($event)" name="Profielfoto" />
-                                            <div class="ImageSelector">
-                                                Afbeelding geselecteerd:<br />
-                                                <span *ngIf="pfpUser && pfpUser.base64Image">
-                                                    Afbeeldingsnaam: {{ pfpUser.imageName }}
-                                                </span>
-                                                <span *ngIf="!pfpUser || !pfpUser.base64Image">
-                                                    Geen afbeelding geselecteerd.
-                                                </span>
-                                            </div>
 
                                             <div class="form-group">
                                                 <button class="btn btn-lg btn-primary btn-block" type="submit">
