--- a/src/app/pages/homepage/online-list/user-card/user-card.component.html
+++ b/src/app/pages/homepage/online-list/user-card/user-card.component.html
@@ -6,8 +6,7 @@
         </div>
     </div>
     <div class="img-container">
-        <span class="helper"></span><img *ngIf="User?.base64Image"[src]="User?.base64Image" alt="Generic placeholder image" class="img-fluid user-img">
-        <span class="helper"></span><img *ngIf="!User?.base64Image" src="./assets/img/default-profile-image.png" alt="Generic placeholder image" class="img-fluid user-img">
+        <span class="helper"></span><img [src]="User?.base64Image || './assets/img/default-profile-image.png'" alt="profile picture" class="img-fluid user-img">
     </div>
     <div class="card-body">
         <span *ngIf=User.isOnline>
