Final Livestream merge :(

--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -9,7 +9,7 @@
                 <app-viewer-count [isStreamer] = false [StreamId]="NewStream.id"></app-viewer-count>
             </div>
 
-            <app-streaming-player></app-streaming-player>
+            <app-streaming-player [HostId]="HostId"></app-streaming-player>
         </div>
     </div>
     <div class="row">
