--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -46,20 +46,9 @@
                 </ng-template>
             </ul>
 
-            <div class="ImageSelector">
-                Afbeelding geselecteerd:<br />
-                <span *ngIf="pfpUser && pfpUser.base64Image">
-                    Afbeeldingsnaam: {{ pfpUser.imageName }}
-                </span>
-                <span *ngIf="!pfpUser || !pfpUser.base64Image">
-                    Geen afbeelding geselecteerd.
-                </span>
-            </div>
             <ul *ngIf="loggedInUser$ | async as user" class="navbar-nav">
                 <li class="nav-item">
-                    <div ngbDropdown class="nav-link d-inline-block">
-                        {{ username }}
-                    </div>
+                    <a class="nav-link" routerLink="profile"><h5>{{username}}</h5></a>
                 </li>
             </ul>
             <form class="d-flex">
