--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -5,11 +5,13 @@
             <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
         </div>
         <div class="col-sm-5 col-md-8 col-lg-6">
-            <div class="viewCountWrapper">
+            <div *ngIf="NewStream != undefined" class="viewCountWrapper">
                 <app-viewer-count [isStreamer] = false [StreamId]="NewStream.id"></app-viewer-count>
             </div>
 
-            <app-streaming-player [HostId]="HostId"></app-streaming-player>
+            <div *ngIf="NewStream != undefined" class="viewCountWrapper">
+                <app-streaming-player [HostId]="HostId" [StreamId]="NewStream.id"></app-streaming-player>
+            </div>
         </div>
     </div>
     <div class="row">
