--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -5,27 +5,26 @@
             <div *ngIf="NewStream != undefined">
                 <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.id"></app-view-count>
             </div>
-            
+
         </div>
         <div class="col">
             <div class="vidBox">
-                <video #videoPlayer autoplay></video> 
+                <video #videoPlayer autoplay></video>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <div class="col buttonrow">
+            <button class="button" (click)="startStream()" [disabled]="recording" value="Start stream">Start
+                stream</button>
+            <button class="button" (click)="endStream()" [disabled]="!recording" value="End stream">End stream</button>
+            <button class="button" (click)="cameraOn()" value="Camera aan">SeeChange aan</button>
+            <button class="button" (click)="cameraOff()" value="Camera uit">SeeChange uit</button>
         </div>
-        <div class="row">
-            <div class="col buttonrow">
-                <button class="button" (click)="startStream()" [disabled]="recording" value="Start stream" >Start stream</button>
-                <button class="button" (click)="endStream()" [disabled]="!recording" value="End stream" >End stream</button>
-                <button class="button" (click)="cameraOn()" value="Camera aan" >SeeChange aan</button>
-                <button class="button" (click)="cameraOff()" value="Camera uit" >SeeChange uit</button>
-            </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
         </div>
-        <div class="row">
-            <div class="col">
-                <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
-            </div>
-        </div>
+    </div>
 </div>
-
-
