--- a/src/app/pages/broadcast/chat-stream/chat-stream.component.html
+++ b/src/app/pages/broadcast/chat-stream/chat-stream.component.html
@@ -4,7 +4,7 @@
     <div class="chat-container">
 
         <div [ngClass]="WriterId == mess.writer.id ? 'own-message' : (HostUserId == mess.writer.id ? 'bot-message' : 'user-message')"
-        class="media" *ngFor="let mess of ListOfChats;">
+            class="media" *ngFor="let mess of ListOfChats;">
             <div class="media-body">
                 <h5 class="mt-0">{{ mess.writer.userName }}</h5>
                 <p>{{ mess.message }}</p>
@@ -18,19 +18,11 @@
         <!-- Chat reageer pagina -->
         <div class="mt-3">
             <form #addComment="ngForm" (submit)="SendMessage()">
-                <textarea 
-                class="form-control" 
-                id="CommentInput" 
-                rows="3" 
-                name="Message" 
-                [(ngModel)]="currentChatBox!.Message"
-                #Message="ngModel"
-                minlength="1"
-                maxlength="300"
-                required>
+                <textarea class="form-control" id="CommentInput" rows="3" name="Message"
+                    [(ngModel)]="currentChatBox!.Message" #Message="ngModel" minlength="1" maxlength="300" required>
             </textarea>
 
-            <!-- <div *ngIf="Message.invalid && Message.touched" class="invalid-input">
+                <!-- <div *ngIf="Message.invalid && Message.touched" class="invalid-input">
                     <div *ngIf="Message.invalid">
                         <div class="errorMessage">
                             <h3>Foute invoer</h3>
@@ -38,7 +30,8 @@
                         </div>
                     </div>
                 </div> -->
-                <button class="btn btn-info mt-2" [disabled]="IsBusy" [disabled]="addComment.invalid">Verstuur bericht</button>
+                <button class="btn btn-info mt-2" [disabled]="IsBusy" [disabled]="addComment.invalid">Verstuur
+                    bericht</button>
             </form>
 
         </div>
