--- a/src/app/pages/homepage/online-list/user-card/user-card.component.css
+++ b/src/app/pages/homepage/online-list/user-card/user-card.component.css
@@ -10,14 +10,13 @@
     margin-top: 5px !important;
     transition: 0.3s;
 
-    box-shadow: 0 0 0 0 rgba(0,0,0,0) !important;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
 .card:hover {
     margin-top: 0 !important;
-    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.75) !important;
+    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.75) !important;
 }
-
 
 .user-img {
     max-width: 180px;
@@ -26,7 +25,7 @@
 
 .img-container {
     width: 200px;
-    height:200px;
+    height: 200px;
     padding: 10px;
     margin-left: calc(50% - 100px);
     vertical-align: center;
