--- a/src/app/pages/homepage/online-list/user-card/user-card.component.html
+++ b/src/app/pages/homepage/online-list/user-card/user-card.component.html
@@ -6,7 +6,8 @@
         </div>
     </div>
     <div class="img-container">
-        <span class="helper"></span><img [src]="User?.base64Image || './assets/img/default-profile-image.png'" alt="profile picture" class="img-fluid user-img">
+        <span class="helper"></span><img [src]="User.base64Image || './assets/img/default-profile-image.png'"
+            alt="profile picture" class="img-fluid user-img">
     </div>
     <div class="card-body">
         <span *ngIf=User.isOnline>
@@ -16,6 +17,6 @@
             <p>Status: Offline<span class="offline">●</span> </p>
         </span>
         <!-- May be edited to specific stream -->
-       <a class="btn btn-primary" >Bekijk stream van {{User.id}}</a>
- </div>
+        <a class="btn btn-primary">Bekijk stream van {{User.id}}</a>
+    </div>
 </a>
