--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,28 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
-        <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"
-                        >Home</a
-                    >
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="listStreamers"
-                        >Streamerlijst</a
-                    >
+                    <a class="nav-link" routerLink="listStreamers">Streamerlijst</a>
                 </li>
                 <li>
                     <a class="nav-link" routerLink="broadcast">Broadcast</a>
@@ -30,10 +19,7 @@
                 <li class="nav-item">
                     <a class="nav-link" routerLink="profile">Profiel</a>
                 </li>
-                <li
-                    class="nav-item"
-                    *ngIf="loggedInUser$ | async as user; else loggedOut"
-                >
+                <li class="nav-item" *ngIf="loggedInUser$ | async as user; else loggedOut">
                     <a class="nav-link" (click)="logout()">Uitloggen</a>
                 </li>
                 <li class="nav-item">
@@ -48,16 +34,13 @@
 
             <ul *ngIf="loggedInUser$ | async as user" class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="profile"><h5>{{username}}</h5></a>
+                    <a class="nav-link" routerLink="profile">
+                        <h5>{{username}}</h5>
+                    </a>
                 </li>
             </ul>
             <form class="d-flex">
-                <input
-                    class="form-control me-2"
-                    type="search"
-                    placeholder="Zoek"
-                    aria-label="Search"
-                />
+                <input class="form-control me-2" type="search" placeholder="Zoek" aria-label="Search" />
                 <button class="btn btn-outline-success" type="submit">
                     Zoek
                 </button>
