--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -5,18 +5,18 @@
             <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
         </div>
         <div class="col-sm-5 col-md-8 col-lg-6">
-            <div *ngIf="NewStream != undefined" class="viewCountWrapper">
-                <app-viewer-count [isStreamer] = false [StreamId]="NewStream.id"></app-viewer-count>
+            <div *ngIf="HasLoaded" class="viewCountWrapper">
+                <app-view-count [HostId]="HostId" [isStreamer] = false [StreamId]="NewStream.id"></app-view-count>
             </div>
 
             <div *ngIf="NewStream != undefined" class="viewCountWrapper">
-                <app-streaming-player [HostId]="HostId" [StreamId]="NewStream.id"></app-streaming-player>
+                <!--<app-streaming-player [HostId]="HostId" [StreamId]="NewStream.id"></app-streaming-player>-->
             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count>
+<!--            <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count>-->
         </div>
         <div class="col-sm-5 col-md-8 col-lg-9 moveLeft10">
             <div class="container py-5">
