--- a/src/app/pages/broadcast/view-count/view-count.component.html
+++ b/src/app/pages/broadcast/view-count/view-count.component.html
@@ -1,3 +1,3 @@
 <div>
-    <p class="viewCount">Aantal kijkers: {{numberList}}</p>
+    <p class="viewCount">Aantal kijkers ECHTE: {{numberList}}</p>
 </div>
