--- a/src/app/shared/nav/nav.component.css
+++ b/src/app/shared/nav/nav.component.css
@@ -33,3 +33,31 @@
     color: white;
     font-weight: 600;
 }
+
+.active {
+    font-size: 1.2rem;
+    color: white !important;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    color: white;
+}
+
+.navbar-brand {
+    font-size: 1.7rem;
+    font-style: italic;
+    color: white;
+    margin-left: 10px;
+}
+
+.nav-link:hover {
+    color: white;
+    transform: scale(0.95);
+    transition: 0.3s;
+}
+
+.nav-link:hover::after {
+    transition: 1s, ease-in-out;
+    transform: scale(1);
+}
