--- a/src/app/pages/broadcast/streaming-player/streaming-player.component.html
+++ b/src/app/pages/broadcast/streaming-player/streaming-player.component.html
@@ -1,7 +1,6 @@
-<!-- streaming-player.component.html -->
 <div>
-    <button (click)="playVideo()">Play Video</button>
     <hr>
     <video #videoPlayer width="840" height="440" controls>
     </video>
+    <button class="button" (click)="playVideo()">Stream bekijken</button>
 </div>
