Hardcode to non hardcode

--- a/src/app/pages/broadcast/view-count/view-count.component.html
+++ b/src/app/pages/broadcast/view-count/view-count.component.html
@@ -6,12 +6,11 @@
                     <div class="card-body moveUp100">
                         <div class="d-flex text-black">
                             <div class="flex-shrink-0">
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
-                                    alt="Generic placeholder image" class="img-fluid"
-                                    style="width: 120px; border-radius: 10px;">
+                                <img [src]="user.base64Image || './assets/img/default-profile-image.png'"
+                                    alt="profile picture" class="img-fluid" style="width: 120px; border-radius: 10px;">
                             </div>
                             <div class="flex-grow-1 ms-3">
-                                <h5 class="mb-1">Danny McLoan</h5>
+                                <h5 class="mb-1">{{user.userName}}</h5>
                                 <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
                                     style="background-color: #efefef;">
                                     <div>
