--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -1,13 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col">
-            <!-- TODO add host id when stream function is done -->
-            <div *ngIf="NewStream != undefined">
-                <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.id"></app-view-count>
-            </div>
-
+        <div class="col-sm-6 col-md-4 col-lg-3">
+            <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
         </div>
-        <div class="col">
+        <div class="col-sm-5 col-md-8 col-lg-6">
             <div class="vidBox">
                 <video #videoPlayer autoplay></video>
             </div>
@@ -22,9 +18,11 @@
             <button class="button" (click)="cameraOff()" value="Camera uit">SeeChange uit</button>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
-        </div>
+</div>
+<br><br><br><br>
+<div class="col-sm-6 col-md-4 col-lg-3">
+    <!-- TODO add host id when stream function is done -->
+    <div *ngIf="NewStream != undefined">
+        <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.id"></app-view-count>
     </div>
 </div>
