Improved viewercount from broadcastpage

--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -23,6 +23,6 @@
 <div class="col-sm-6 col-md-4 col-lg-3">
     <!-- TODO add host id when stream function is done -->
     <div *ngIf="NewStream != undefined">
-        <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.id"></app-view-count>
+        <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.streamId"></app-view-count>
     </div>
 </div>
