--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
             <!-- Where Chat comes -->
             <div *ngIf="NewStream != undefined" class="viewCountWrapper">
-                <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
+                <!-- <app-chat-stream [HostUserId]="HostId"></app-chat-stream> -->
             </div>
         </div>
         <div class="col-sm-5 col-md-8 col-lg-6">
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div *ngIf="NewStream != undefined" class="viewCountWrapper">
-                <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count>
+                <!-- <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count> -->
             </div>
         </div>
     </div>
