Implemented stream page into broadcast

--- a/src/app/pages/broadcast/video-player/video-player.component.html
+++ b/src/app/pages/broadcast/video-player/video-player.component.html
@@ -1,5 +1,5 @@
 <div #videoContainer id="videoContainer">
     <h1>HLS JS Player</h1>
     <!-- declare the #videoPlayer as a used input -->
-    <video #videoPlayer id="videoPlayer" width="352" height="198" controls autoplay playsinline></video>
+    <video #videoPlayer id="videoPlayer" height="90%" controls autoplay playsinline></video>
 </div>
