--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -3,26 +3,13 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
             <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
         </div>
-        <div class="col-sm-5 col-md-8 col-lg-6">
+        <div class="col-sm-5 col-md-8 col-lg-9">
             <div class="vidBox">
-                <video #videoPlayer autoplay></video>
+                <div #videoContainer class="vidBox" id="videoContainer">
+                    <!-- declare the #videoPlayer as a used input -->
+                    <video #videoPlayer id="videoPlayer" width="100%" controls autoplay playsinline></video>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col buttonrow">
-            <button class="button" (click)="startStream()" [disabled]="recording" value="Start stream">Start
-                stream</button>
-            <button class="button" (click)="endStream()" [disabled]="!recording" value="End stream">End stream</button>
-            <button class="button" (click)="cameraOn()" value="Camera aan">SeeChange aan</button>
-            <button class="button" (click)="cameraOff()" value="Camera uit">SeeChange uit</button>
-        </div>
-    </div>
-</div>
-<br><br><br><br>
-<div class="col-sm-6 col-md-4 col-lg-3">
-    <!-- TODO add host id when stream function is done -->
-    <div *ngIf="NewStream != undefined">
-        <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.streamId"></app-view-count>
     </div>
 </div>
