Added streaming key generate function

--- a/src/app/pages/profile/profile-page/profile-page.component.css
+++ b/src/app/pages/profile/profile-page/profile-page.component.css
@@ -1,4 +1,3 @@
-
 .user-img {
     max-width: 200px;
     max-height: 200px;
@@ -20,4 +19,8 @@
 
 .image-uploader {
     margin-bottom: 5px;
+}
+
+.moveUp30 {
+    margin-top: -30px;
 }
