--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -10,12 +10,16 @@
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-4">
                             <div class="d-flex text-black">
-                                <div class="flex-shrink-0">
-                                    <div class="img-container">
-                                        <span class="helper"></span><img
-                                            [src]="user?.base64Image || './assets/img/default-profile-image.png'"
-                                            alt="profile picture" class="img-fluid user-img">
+                                <div class="row-sm-5 row-md-3 row-lg-2">
+                                    <div class="flex-shrink-0">
+                                        <div class="img-container">
+                                            <span class="helper"></span><img
+                                                [src]="user?.base64Image || './assets/img/default-profile-image.png'"
+                                                alt="profile picture" class="img-fluid user-img">
+                                        </div>
                                     </div>
+                                    <button class="btn btn-primary btn-block moveUp30"
+                                        (click)="generateStreamingKey()">Streaming-sleutel genereren</button>
                                 </div>
                                 <div class="flex-grow-1 ms-3">
                                     <h5 class="mb-1">{{user?.userName}}</h5>
@@ -37,7 +41,7 @@
                                                 name="Profielfoto" />
 
                                             <div class="form-group">
-                                                <button class="btn btn-lg btn-primary btn-block" type="submit">
+                                                <button class="btn btn-primary btn-block" type="submit">
                                                     aanpassen
                                                 </button>
                                             </div>
