--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -1,22 +1,45 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <!-- Where Chat comes -->
-            <div *ngIf="NewStream != undefined" class="viewCountWrapper">
-                <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
+            <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
+        </div>
+        <div class="col-sm-5 col-md-8 col-lg-9">
+            <div class="vidBox">
+                <div #videoContainer class="vidBox" id="videoContainer">
+                    <!-- declare the #videoPlayer as a used input -->
+                    <video #videoPlayer id="videoPlayer" width="100%" controls autoplay playsinline></video>
+                </div>
             </div>
         </div>
-        <div class="col-sm-5 col-md-8 col-lg-6">
-            <div *ngIf="NewStream != undefined" class="viewCountWrapper">
-                <app-streaming-player [HostId]="HostId" [StreamId]="NewStream.id"></app-streaming-player>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div *ngIf="NewStream != undefined" class="viewCountWrapper">
-                <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count>
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div *ngIf="NewStream != undefined" class="viewCountWrapper">
+                    <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="col-sm-6 col-md-4 col-lg-3">-->
+<!--            &lt;!&ndash; Where Chat comes &ndash;&gt;-->
+<!--            <div *ngIf="NewStream != undefined" class="viewCountWrapper">-->
+<!--                <app-chat-stream [HostUserId]="HostId"></app-chat-stream>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-sm-5 col-md-8 col-lg-6">-->
+<!--            <div *ngIf="NewStream != undefined" class="viewCountWrapper">-->
+<!--                <app-streaming-player [HostId]="HostId" [StreamId]="NewStream.id"></app-streaming-player>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="row">-->
+<!--        <div class="col-sm-6 col-md-4 col-lg-3">-->
+<!--            <div *ngIf="NewStream != undefined" class="viewCountWrapper">-->
+<!--                <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
