Language improvements and cleanup

--- a/src/app/pages/broadcast/video-player/video-player.component.html
+++ b/src/app/pages/broadcast/video-player/video-player.component.html
@@ -1,5 +1,4 @@
 <div #videoContainer id="videoContainer">
-    <h1>HLS JS Player</h1>
-    <!-- declare the #videoPlayer as a used input -->
+    <h1>HLS JS-speler</h1>
     <video #videoPlayer id="videoPlayer" height="90%" controls autoplay playsinline></video>
 </div>
