--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <div *ngIf="!hasIntegrity">
-            <h1 style="color: red">WAARSCHUWING, DE DATA VAN DEZE REQUEST IS NIET INTEGER. HET KAN ZIJN DAT IEMAND DE
-                DATA HEEFT VERANDERD</h1>
+            <h1 style="color: red">Waarschuwing: De gegevens van deze aanvraag is niet integer. Het is mogelijk
+                dat iemand de gegevens heeft aangepast.</h1>
         </div>
         <label for="inputUserName">Gebruikersnaam</label>
-        <input type="userName" class="form-control" placeholder="userName" formControlName="userName" id="inputUserName"
-            [ngClass]="{
+        <input type="userName" class="form-control" placeholder="Gebruikersnaam" formControlName="userName"
+            id="inputUserName" [ngClass]="{
                 'is-invalid':
                     loginForm.get('userName')?.invalid &&
                     loginForm.get('userName')?.touched
