--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -1,7 +1,7 @@
 <ng-container>
     <div *ngIf="!hasIntegrity">
-        <h1 style="color: red">WAARSCHUWING, DE DATA VAN DEZE REQUEST IS NIET INTEGER. HET KAN ZIJN DAT IEMAND DE DATA
-            HEEFT VERANDERD</h1>
+        <h1 style="color: red">Waarschuwing: De gegevens van deze aanvraag is niet integer. Het is mogelijk
+            dat iemand de gegevens heeft aangepast.</h1>
     </div>
     <section class="vh-100" style="background-color: #9de2ff;">
         <div class="container py-5 h-100">
@@ -26,22 +26,20 @@
                                     <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
                                         style="background-color: #efefef;">
                                         <div>
-                                            <p class="small text-muted mb-1">Bitconnect Balance</p>
+                                            <p class="small text-muted mb-1">Bitconnect Balans</p>
                                             <p class="mb-0">{{user?.balance}}</p>
                                         </div>
                                     </div>
                                     <div class="d-flex pt-1">
                                         <form (ngSubmit)="onSubmit()">
                                             <p>
-                                                <label for="Profielfoto">Profielfoto</label>
+                                                <label for="pfp">Profielfoto kiezen</label>
                                             </p>
-                                            <input placeholder="Upload je profielfoto." type="file" id="file"
-                                                class="image-uploader" (change)="onSelectFile($event)"
-                                                name="Profielfoto" />
-
+                                            <input type="file" id="pfp" class="image-uploader"
+                                                (change)="onSelectFile($event)" />
                                             <div class="form-group">
                                                 <button class="btn btn-primary btn-block" type="submit">
-                                                    aanpassen
+                                                    Foto toepassen
                                                 </button>
                                             </div>
                                         </form>
@@ -51,7 +49,8 @@
                             <div *ngIf="streamingKey">
                                 <p>Streaming Key:</p>
                                 <pre>{{ streamingKey }}</pre>
-                                <button class="btn btn-secondary" (click)="copyToClipboard()">Copy to Clipboard</button>
+                                <button class="btn btn-secondary" (click)="copyToClipboard()">Kopiëren naar
+                                    klembord</button>
                             </div>
                         </div>
                     </div>
