--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -1,15 +1,16 @@
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
-        </div>
-        <div class="col-sm-5 col-md-8 col-lg-9">
-            <div class="vidBox">
-                <div #videoContainer class="vidBox" id="videoContainer">
-                    <!-- declare the #videoPlayer as a used input -->
-                    <video #videoPlayer id="videoPlayer" width="100%" controls autoplay playsinline></video>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!--<div class="container">-->
+<!--    <div class="row">-->
+<!--        <div class="col-sm-6 col-md-4 col-lg-3">-->
+<!--            <app-chat-stream [HostUserId]="HostId"></app-chat-stream>-->
+<!--        </div>-->
+<!--        <div class="col-sm-5 col-md-8 col-lg-9">-->
+<!--            <div class="vidBox">-->
+<!--                <div #videoContainer class="vidBox" id="videoContainer">-->
+<!--                    &lt;!&ndash; declare the #videoPlayer as a used input &ndash;&gt;-->
+<!--                    <video #videoPlayer id="videoPlayer" width="100%" controls autoplay playsinline></video>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<app-stream-page [HostId]="HostId"></app-stream-page>
